--- a/src/index.css
+++ b/src/index.css
@@ -17,8 +17,9 @@ html, body{
   margin: 0 auto;
   min-height: 100vh;
   height: 100%;
-  box-shadow: rgba(100,100,100,0.2) 0px 0px 29px 0px;
+  box-shadow: rgba(58, 32, 32, 0.2) 0px 0px 29px 0px;
   padding: 0px 20px;
+ 
 }
 
 body * {
